Resolve {bz: 1875}. Fine tweaking the position of menu on IE. There is still one-pixel different between IE6 and IE7, but it seems good enough.
git-svn-id: https://repo.socialtext.net:8999/svn/socialtext/trunk@11849 593ce9bc-2028-0410-bb98-c566b643a948

--- a/nlw/share/skin/s3/css/screen.ie.css
+++ b/nlw/share/skin/s3/css/screen.ie.css
@@ -282,3 +282,20 @@ div.pagination-container .paging-forward {
 .table_buttons.disabled {
     filter: alpha(opacity = 30);
 }
+
+#quickLinks form {
+    margin-top: -3px;
+    padding: 0;
+}
+
+#quickLinks form span {
+    vertical-align: middle;
+}
+#quickLinks form select {
+    vertical-align: middle;
+    margin: 0;
+    padding: 0;
+    font-size: 0.9em;
+    z-index: 10;
+}
+
